--- a/style/style.css
+++ b/style/style.css
@@ -75,17 +75,92 @@
 .banner-image img {
     object-fit: cover;
     width: 100%;
-   
-    
+
+
 }
+
 /* logo section style  */
-.logo-container{
+.logo-container {
     display: flex;
     justify-content: space-evenly;
     width: 80%;
     margin: 0 auto;
     padding-top: 6rem;
     align-items: center;
+}
+
+/* box style here */
+.box-header {
+    color: #3A3A3A;
+    font-size: 1.75rem;
+    font-weight: 600;
+    text-align: center;
+    padding-top: 5rem;
+    padding-bottom: 2rem;
+}
+
+.box-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 80%;
+    justify-content: space-around;
+    margin: 0 auto;
+    gap: 10px;
+}
+
+.box {
+    border-radius: 0.3125rem;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    width: 90%;
+    padding: 10px;
+
+
+}
+
+.box img {
+    width: 100%;
+
+}
+
+.box-title {
+    color: #18191F;
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
+.price {
+    color: rgba(0, 0, 0, 0.87);
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+.fa-solid {
+    color: #FB8200;
+
+}
+
+.rating {
+    color: #5E6366;
+    font-family: Roboto;
+    font-weight: 700;
+    padding-left: 1.2rem;
+}
+
+.box-description {
+    color: #787885;
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.see-more {
+    color: rgba(224, 44, 109, 0.87);
+    font-size: 1rem;
+    font-weight: 700;
+    text-align: right;
+    padding-right: 4.5rem;
 }
 
 /* media query */
@@ -103,20 +178,28 @@
         padding: 10px;
         text-align: center;
     }
-    .banner-container{
+
+    .banner-container {
         flex-direction: column-reverse;
         padding: 10px;
     }
-    .banner-image{
+
+    .banner-image {
         width: 100%;
     }
+
     .banner-item {
         text-align: center;
     }
-    .logo-container{
+
+    .logo-container {
         flex-wrap: wrap;
         gap: 20px;
     }
-    
+
+    .box-container {
+        grid-template-columns: 1fr;
+    }
+
 
 }
